# BioLOLPython

./: .gitignore  BioLOLPython.py  Readme.md  pyproject.toml  requirements.txt  streamlit_app.py
bio/: sequence.py
bioLOLPython/: cli.py  interpreter.py
bioLOLPython/bio/: sequence.py
examples/: test_alignment.lolz  test_bio.lolz  test_transcribe.lolz  test_translate.lolz  test_violence.lolz
tests/: test_sequence.py
