[project]
name = "bioLOLPython"
version = "0.1.0"
description = "A meme-inspired biological language interpreter (bioLOLCODE)"
authors = [{name="Chen Hsieh", email="chen.hsieh.uga@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "biopython",
  "ply"
]

[project.scripts]
bioLOL = "bioLOLPython.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
